<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="vertical"
android:layout_margin="16dp"
tools:context=".MainActivity">


<TextView
    android:id="@+id/textViewAmount"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/amount" />

<EditText
    android:id="@+id/editTextAmount"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/enter_amount"
    android:inputType="textPersonName" />

<TextView
    android:id="@+id/textViewNumOfPax"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/num_of_pax" />

<EditText
    android:id="@+id/editTextNumOfPax"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/enter_pax"
    android:inputType="textPersonName" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ToggleButton
        android:id="@+id/toggleButtonSvs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/Svs"
        android:textOff="@string/no_svs"
        android:textOn="@string/svs" />

    <ToggleButton
        android:id="@+id/toggleButtonGst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/togglebutton"
        android:textOff="@string/no_gst"
        android:textOn="@string/gst" />
</LinearLayout>

<TextView
    android:id="@+id/textViewDiscount"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/discount" />

<EditText
    android:id="@+id/editTextDiscount"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/enter_discount_in"
    android:inputType="textPersonName" />

<TextView
    android:id="@+id/textViewTotal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/total_bill" />

<TextView
    android:id="@+id/textViewEach"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/each_pays" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <Button
        android:id="@+id/buttonSplit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/split" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/reset" />

</LinearLayout>
</LinearLayout>